KBParser/src/main/java/org/bambrikii/kbParser/nativeLanguages/grammars/EnglishParser.java
// $ANTLR 3.3 Nov 30, 2010 12:46:29 C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g 2011-07-10 00:14:33

  package org.bambrikii.kbParser.nativeLanguages.grammars;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class EnglishParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "WS", "WORD", "NUMBER", "DOT", "QUESTION", "EXCLAMATION", "COMMA", "COLON", "SEMICOLON", "LETTER", "DASH", "APOSTROPHE", "'\\n'", "'('", "')'"
    };
    public static final int EOF=-1;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int WS=4;
    public static final int WORD=5;
    public static final int NUMBER=6;
    public static final int DOT=7;
    public static final int QUESTION=8;
    public static final int EXCLAMATION=9;
    public static final int COMMA=10;
    public static final int COLON=11;
    public static final int SEMICOLON=12;
    public static final int LETTER=13;
    public static final int DASH=14;
    public static final int APOSTROPHE=15;

    // delegates
    // delegators


        public EnglishParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public EnglishParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return EnglishParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g"; }


    public static class article_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "article"
    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:19:1: article : header ( paragraph )+ ;
    public final EnglishParser.article_return article() throws RecognitionException {
        EnglishParser.article_return retval = new EnglishParser.article_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        EnglishParser.header_return header1 = null;

        EnglishParser.paragraph_return paragraph2 = null;



        try {
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:19:8: ( header ( paragraph )+ )
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:19:10: header ( paragraph )+
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_header_in_article51);
            header1=header();

            state._fsp--;

            adaptor.addChild(root_0, header1.getTree());
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:19:17: ( paragraph )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==16) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:19:17: paragraph
            	    {
            	    pushFollow(FOLLOW_paragraph_in_article53);
            	    paragraph2=paragraph();

            	    state._fsp--;

            	    adaptor.addChild(root_0, paragraph2.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "article"

    public static class paragraph_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "paragraph"
    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:20:1: paragraph : '\\n' ( sentence )+ ;
    public final EnglishParser.paragraph_return paragraph() throws RecognitionException {
        EnglishParser.paragraph_return retval = new EnglishParser.paragraph_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal3=null;
        EnglishParser.sentence_return sentence4 = null;


        Object char_literal3_tree=null;

        try {
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:20:10: ( '\\n' ( sentence )+ )
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:20:13: '\\n' ( sentence )+
            {
            root_0 = (Object)adaptor.nil();

            char_literal3=(Token)match(input,16,FOLLOW_16_in_paragraph61); 
            char_literal3_tree = (Object)adaptor.create(char_literal3);
            adaptor.addChild(root_0, char_literal3_tree);

            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:20:18: ( sentence )+
            int cnt2=0;
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( ((LA2_0>=WORD && LA2_0<=NUMBER)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:20:18: sentence
            	    {
            	    pushFollow(FOLLOW_sentence_in_paragraph63);
            	    sentence4=sentence();

            	    state._fsp--;

            	    adaptor.addChild(root_0, sentence4.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        throw eee;
                }
                cnt2++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "paragraph"

    public static class header_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "header"
    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:21:1: header : ( phrase | any_word )+ ( ',' ( phrase | any_word )+ )* ;
    public final EnglishParser.header_return header() throws RecognitionException {
        EnglishParser.header_return retval = new EnglishParser.header_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal7=null;
        EnglishParser.phrase_return phrase5 = null;

        EnglishParser.any_word_return any_word6 = null;

        EnglishParser.phrase_return phrase8 = null;

        EnglishParser.any_word_return any_word9 = null;


        Object char_literal7_tree=null;

        try {
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:21:8: ( ( phrase | any_word )+ ( ',' ( phrase | any_word )+ )* )
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:21:10: ( phrase | any_word )+ ( ',' ( phrase | any_word )+ )*
            {
            root_0 = (Object)adaptor.nil();

            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:21:10: ( phrase | any_word )+
            int cnt3=0;
            loop3:
            do {
                int alt3=3;
                int LA3_0 = input.LA(1);

                if ( ((LA3_0>=WORD && LA3_0<=NUMBER)) ) {
                    int LA3_2 = input.LA(2);

                    if ( (LA3_2==WS) ) {
                        alt3=1;
                    }
                    else if ( ((LA3_2>=WORD && LA3_2<=NUMBER)||LA3_2==COMMA||LA3_2==16) ) {
                        alt3=2;
                    }


                }


                switch (alt3) {
            	case 1 :
            	    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:21:11: phrase
            	    {
            	    pushFollow(FOLLOW_phrase_in_header72);
            	    phrase5=phrase();

            	    state._fsp--;

            	    adaptor.addChild(root_0, phrase5.getTree());

            	    }
            	    break;
            	case 2 :
            	    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:21:20: any_word
            	    {
            	    pushFollow(FOLLOW_any_word_in_header76);
            	    any_word6=any_word();

            	    state._fsp--;

            	    adaptor.addChild(root_0, any_word6.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);

            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:21:32: ( ',' ( phrase | any_word )+ )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==COMMA) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:21:33: ',' ( phrase | any_word )+
            	    {
            	    char_literal7=(Token)match(input,COMMA,FOLLOW_COMMA_in_header82); 
            	    char_literal7_tree = (Object)adaptor.create(char_literal7);
            	    adaptor.addChild(root_0, char_literal7_tree);

            	    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:21:37: ( phrase | any_word )+
            	    int cnt4=0;
            	    loop4:
            	    do {
            	        int alt4=3;
            	        int LA4_0 = input.LA(1);

            	        if ( ((LA4_0>=WORD && LA4_0<=NUMBER)) ) {
            	            int LA4_2 = input.LA(2);

            	            if ( (LA4_2==WS) ) {
            	                alt4=1;
            	            }
            	            else if ( ((LA4_2>=WORD && LA4_2<=NUMBER)||LA4_2==COMMA||LA4_2==16) ) {
            	                alt4=2;
            	            }


            	        }


            	        switch (alt4) {
            	    	case 1 :
            	    	    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:21:38: phrase
            	    	    {
            	    	    pushFollow(FOLLOW_phrase_in_header85);
            	    	    phrase8=phrase();

            	    	    state._fsp--;

            	    	    adaptor.addChild(root_0, phrase8.getTree());

            	    	    }
            	    	    break;
            	    	case 2 :
            	    	    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:21:47: any_word
            	    	    {
            	    	    pushFollow(FOLLOW_any_word_in_header89);
            	    	    any_word9=any_word();

            	    	    state._fsp--;

            	    	    adaptor.addChild(root_0, any_word9.getTree());

            	    	    }
            	    	    break;

            	    	default :
            	    	    if ( cnt4 >= 1 ) break loop4;
            	                EarlyExitException eee =
            	                    new EarlyExitException(4, input);
            	                throw eee;
            	        }
            	        cnt4++;
            	    } while (true);


            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "header"

    public static class phrase_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "phrase"
    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:23:1: phrase : ( any_word ) ( WS any_word )+ ;
    public final EnglishParser.phrase_return phrase() throws RecognitionException {
        EnglishParser.phrase_return retval = new EnglishParser.phrase_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token WS11=null;
        EnglishParser.any_word_return any_word10 = null;

        EnglishParser.any_word_return any_word12 = null;


        Object WS11_tree=null;

        try {
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:23:7: ( ( any_word ) ( WS any_word )+ )
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:23:9: ( any_word ) ( WS any_word )+
            {
            root_0 = (Object)adaptor.nil();

            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:23:9: ( any_word )
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:23:10: any_word
            {
            pushFollow(FOLLOW_any_word_in_phrase101);
            any_word10=any_word();

            state._fsp--;

            adaptor.addChild(root_0, any_word10.getTree());

            }

            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:23:20: ( WS any_word )+
            int cnt6=0;
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==WS) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:23:21: WS any_word
            	    {
            	    WS11=(Token)match(input,WS,FOLLOW_WS_in_phrase105); 
            	    WS11_tree = (Object)adaptor.create(WS11);
            	    adaptor.addChild(root_0, WS11_tree);

            	    pushFollow(FOLLOW_any_word_in_phrase107);
            	    any_word12=any_word();

            	    state._fsp--;

            	    adaptor.addChild(root_0, any_word12.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt6 >= 1 ) break loop6;
                        EarlyExitException eee =
                            new EarlyExitException(6, input);
                        throw eee;
                }
                cnt6++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "phrase"

    public static class any_word_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "any_word"
    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:24:1: any_word : ( WORD | NUMBER ) ;
    public final EnglishParser.any_word_return any_word() throws RecognitionException {
        EnglishParser.any_word_return retval = new EnglishParser.any_word_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token set13=null;

        Object set13_tree=null;

        try {
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:24:10: ( ( WORD | NUMBER ) )
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:24:12: ( WORD | NUMBER )
            {
            root_0 = (Object)adaptor.nil();

            set13=(Token)input.LT(1);
            if ( (input.LA(1)>=WORD && input.LA(1)<=NUMBER) ) {
                input.consume();
                adaptor.addChild(root_0, (Object)adaptor.create(set13));
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "any_word"

    public static class sentence_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "sentence"
    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:26:1: sentence : ( assertion | question | exclamation );
    public final EnglishParser.sentence_return sentence() throws RecognitionException {
        EnglishParser.sentence_return retval = new EnglishParser.sentence_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        EnglishParser.assertion_return assertion14 = null;

        EnglishParser.question_return question15 = null;

        EnglishParser.exclamation_return exclamation16 = null;



        try {
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:26:9: ( assertion | question | exclamation )
            int alt7=3;
            alt7 = dfa7.predict(input);
            switch (alt7) {
                case 1 :
                    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:26:11: assertion
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_assertion_in_sentence130);
                    assertion14=assertion();

                    state._fsp--;

                    adaptor.addChild(root_0, assertion14.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:26:23: question
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_question_in_sentence134);
                    question15=question();

                    state._fsp--;

                    adaptor.addChild(root_0, question15.getTree());

                    }
                    break;
                case 3 :
                    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:26:34: exclamation
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_exclamation_in_sentence138);
                    exclamation16=exclamation();

                    state._fsp--;

                    adaptor.addChild(root_0, exclamation16.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "sentence"

    public static class assertion_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "assertion"
    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:28:1: assertion : sentence_body DOT ;
    public final EnglishParser.assertion_return assertion() throws RecognitionException {
        EnglishParser.assertion_return retval = new EnglishParser.assertion_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token DOT18=null;
        EnglishParser.sentence_body_return sentence_body17 = null;


        Object DOT18_tree=null;

        try {
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:28:10: ( sentence_body DOT )
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:28:12: sentence_body DOT
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_sentence_body_in_assertion145);
            sentence_body17=sentence_body();

            state._fsp--;

            adaptor.addChild(root_0, sentence_body17.getTree());
            DOT18=(Token)match(input,DOT,FOLLOW_DOT_in_assertion147); 
            DOT18_tree = (Object)adaptor.create(DOT18);
            adaptor.addChild(root_0, DOT18_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "assertion"

    public static class question_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "question"
    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:29:1: question : sentence_body QUESTION ;
    public final EnglishParser.question_return question() throws RecognitionException {
        EnglishParser.question_return retval = new EnglishParser.question_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token QUESTION20=null;
        EnglishParser.sentence_body_return sentence_body19 = null;


        Object QUESTION20_tree=null;

        try {
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:29:9: ( sentence_body QUESTION )
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:29:11: sentence_body QUESTION
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_sentence_body_in_question153);
            sentence_body19=sentence_body();

            state._fsp--;

            adaptor.addChild(root_0, sentence_body19.getTree());
            QUESTION20=(Token)match(input,QUESTION,FOLLOW_QUESTION_in_question155); 
            QUESTION20_tree = (Object)adaptor.create(QUESTION20);
            adaptor.addChild(root_0, QUESTION20_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "question"

    public static class exclamation_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "exclamation"
    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:30:1: exclamation : sentence_body EXCLAMATION ;
    public final EnglishParser.exclamation_return exclamation() throws RecognitionException {
        EnglishParser.exclamation_return retval = new EnglishParser.exclamation_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EXCLAMATION22=null;
        EnglishParser.sentence_body_return sentence_body21 = null;


        Object EXCLAMATION22_tree=null;

        try {
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:30:12: ( sentence_body EXCLAMATION )
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:30:14: sentence_body EXCLAMATION
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_sentence_body_in_exclamation161);
            sentence_body21=sentence_body();

            state._fsp--;

            adaptor.addChild(root_0, sentence_body21.getTree());
            EXCLAMATION22=(Token)match(input,EXCLAMATION,FOLLOW_EXCLAMATION_in_exclamation163); 
            EXCLAMATION22_tree = (Object)adaptor.create(EXCLAMATION22);
            adaptor.addChild(root_0, EXCLAMATION22_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "exclamation"

    public static class sentence_body_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "sentence_body"
    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:32:1: sentence_body : ( phrase | any_word )+ ( ( COMMA | COLON ) ( phrase | any_word | elaboration )+ )* ;
    public final EnglishParser.sentence_body_return sentence_body() throws RecognitionException {
        EnglishParser.sentence_body_return retval = new EnglishParser.sentence_body_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token set25=null;
        EnglishParser.phrase_return phrase23 = null;

        EnglishParser.any_word_return any_word24 = null;

        EnglishParser.phrase_return phrase26 = null;

        EnglishParser.any_word_return any_word27 = null;

        EnglishParser.elaboration_return elaboration28 = null;


        Object set25_tree=null;

        try {
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:32:14: ( ( phrase | any_word )+ ( ( COMMA | COLON ) ( phrase | any_word | elaboration )+ )* )
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:32:16: ( phrase | any_word )+ ( ( COMMA | COLON ) ( phrase | any_word | elaboration )+ )*
            {
            root_0 = (Object)adaptor.nil();

            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:32:16: ( phrase | any_word )+
            int cnt8=0;
            loop8:
            do {
                int alt8=3;
                int LA8_0 = input.LA(1);

                if ( ((LA8_0>=WORD && LA8_0<=NUMBER)) ) {
                    int LA8_2 = input.LA(2);

                    if ( (LA8_2==WS) ) {
                        alt8=1;
                    }
                    else if ( ((LA8_2>=WORD && LA8_2<=COLON)) ) {
                        alt8=2;
                    }


                }


                switch (alt8) {
            	case 1 :
            	    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:32:17: phrase
            	    {
            	    pushFollow(FOLLOW_phrase_in_sentence_body171);
            	    phrase23=phrase();

            	    state._fsp--;

            	    adaptor.addChild(root_0, phrase23.getTree());

            	    }
            	    break;
            	case 2 :
            	    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:32:26: any_word
            	    {
            	    pushFollow(FOLLOW_any_word_in_sentence_body175);
            	    any_word24=any_word();

            	    state._fsp--;

            	    adaptor.addChild(root_0, any_word24.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt8 >= 1 ) break loop8;
                        EarlyExitException eee =
                            new EarlyExitException(8, input);
                        throw eee;
                }
                cnt8++;
            } while (true);

            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\main\\java\\org\\bambrikii\\kbParser\\nativeLanguages\\grammars\\English.g:32:38: ( ( COMMA | COLON ) ( phrase | any_word | elaboration )+ )*
            loop10:
            do {
                int alt10=2;
                int LA10_0 = input.LA(1);

                if ( ((LA10_0>=COMMA && LA10_0<=COLON)) ) {
                    alt10=1;
                }

